--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,9 @@
 
 <body class="mat-typography">
   <app-root></app-root>
+  <!-- <script src="../node_modules/chart.js/src/chart.js"> -->
+
+  </script>
 </body>
 
 </html>
